# sugarbar

./: .dockerignore  .env  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  TODO.md  compose.override.yml  compose.yml  index.py  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  spotdl-config.json  tsconfig.json  vercel.json  vite.config.ts
.diagrams/: diagram.excalidraw
.github/workflows/: build.yml
.output/: nitro.json
.output/server/: index.mjs  index.mjs.map  package.json
api/: .dockerignore  .gitignore  Dockerfile  app.py  index.py  pyproject.toml
api/app/: logger.py  main.py  musixmatch.py  youtube.py
api/app/routers/: lyrics.py  youtube.py
api/app/scripts/: profile_manager.py
api/app/services/: genius.py  musixmatch.py  youtube.py
api/app/utils/: config.py
api/routers/: lyrics.py  youtube.py
api/scripts/: start.sh
api/services/: base.py  genius.py  musixmatch.py  youtube.py
app/: globals.css
backend/: run_server.py
backend/app/: main.py
convex/: album_workflow.ts  audio.ts  auth.config.ts  bars.ts  convex.config.ts  db.ts  example.ts  genre.ts  lyric.ts  lyrics.ts  schema.ts  spotify.ts  tsconfig.json  workflow_jobs.ts
convex/_generated/: api.d.ts
convex/model/: album.ts  artist.ts  lyric.ts  metadata.ts  track.ts
convex/providers/: base.ts
convex/utils/: helpers.ts  typings.ts
lyrics-service/app/: config.py  main.py  (+2 more)
lyrics_service/: pyproject.toml  run_server.py
lyrics_service/app/: base.py  genius.py  logger.py  main.py  musixmatch.py
src/: routeTree.gen.ts  router.tsx  sample-data.ts  server.ts
(+98 files in other folders)
