[project]
name = "lyrics-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.3",
    "cssselect>=1.3.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "orjson>=3.11.3",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.9",
    "unidecode>=1.4.0",
]

[tool.ruff.lint]
ignore = ["F401"]
